--- a/MyRasterizer/MyRasterizer.vcxproj.filters
+++ b/MyRasterizer/MyRasterizer.vcxproj.filters
@@ -44,7 +44,7 @@
     <ClCompile Include="Src\Entity.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Src\MyRasterizer.cpp">
+    <ClCompile Include="Src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Src\Texture.cpp">
