--- a/MyRasterizer/MyRasterizer.vcxproj
+++ b/MyRasterizer/MyRasterizer.vcxproj
@@ -28,12 +28,12 @@
     <ClInclude Include="Include\Texture.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Color.cpp" />
     <ClCompile Include="Src\Mesh.cpp" />
-    <ClCompile Include="Src\Color.cpp" />
     <ClCompile Include="Src\Entity.cpp" />
     <ClCompile Include="Src\main.cpp" />
+    <ClCompile Include="src\Rasterizer.cpp" />
     <ClCompile Include="Src\Scene.cpp" />
-    <ClCompile Include="Src\Vertex.cpp" />
     <ClCompile Include="Src\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
