--- a/MyRasterizer/MyRasterizer.vcxproj.filters
+++ b/MyRasterizer/MyRasterizer.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Include\Rasterizer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Entity.cpp">
