--- a/MyRasterizer/MyRasterizer.vcxproj
+++ b/MyRasterizer/MyRasterizer.vcxproj
@@ -19,24 +19,30 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Include\App.h" />
+    <ClInclude Include="Include\Camera.h" />
     <ClInclude Include="Include\Color.h" />
     <ClInclude Include="Include\Entity.h" />
     <ClInclude Include="Include\Rasterizer.h" />
     <ClInclude Include="Include\Scene.h" />
     <ClInclude Include="Include\Mesh.h" />
+    <ClInclude Include="Include\ITransformable.h" />
     <ClInclude Include="Include\Vertex.h" />
     <ClInclude Include="Include\Texture.h" />
     <ClInclude Include="Include\Light.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Src\App.cpp" />
+    <ClCompile Include="Src\Camera.cpp" />
     <ClCompile Include="Src\Light.cpp" />
-    <ClCompile Include="src\Color.cpp" />
+    <ClCompile Include="Src\Color.cpp" />
     <ClCompile Include="Src\Mesh.cpp" />
     <ClCompile Include="Src\Entity.cpp" />
     <ClCompile Include="Src\main.cpp" />
-    <ClCompile Include="src\Rasterizer.cpp" />
+    <ClCompile Include="Src\Rasterizer.cpp" />
     <ClCompile Include="Src\Scene.cpp" />
     <ClCompile Include="Src\Texture.cpp" />
+    <ClCompile Include="Src\ITransformable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibMath\LibMath.vcxproj">
